tests/ui/lifetimes/elided-lifetime-mismatch-in-self-type.stderr
error[E0308]: mismatched `self` parameter type
  --> $DIR/elided-lifetime-mismatch-in-self-type.rs:10:18
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                  ^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `Pair<&_, _>`
              found struct `Pair<&_, _>`
note: the anonymous lifetime defined here...
  --> $DIR/elided-lifetime-mismatch-in-self-type.rs:10:24
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                        ^^^^
note: ...does not necessarily outlive the anonymous lifetime as defined here
  --> $DIR/elided-lifetime-mismatch-in-self-type.rs:7:5
   |
LL |     &str,
   |     ^

error[E0308]: mismatched `self` parameter type
  --> $DIR/elided-lifetime-mismatch-in-self-type.rs:10:18
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                  ^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected struct `Pair<&_, _>`
              found struct `Pair<&_, _>`
note: the anonymous lifetime as defined here...
  --> $DIR/elided-lifetime-mismatch-in-self-type.rs:7:5
   |
LL |     &str,
   |     ^
note: ...does not necessarily outlive the anonymous lifetime defined here
  --> $DIR/elided-lifetime-mismatch-in-self-type.rs:10:24
   |
LL |     fn say(self: &Pair<&str, isize>) {
   |                        ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
